mainheader z-index correction

--- a/src/components/MainHeader/MainHeader.module.scss
+++ b/src/components/MainHeader/MainHeader.module.scss
@@ -6,7 +6,7 @@
 	text-align: center;
 	position: fixed;
 	background: white;
-
+    z-index: 99;
 	.linkhome {
 		cursor: default;
 		&:visited,
